--- a/wp-content/themes/anbig/assets/less/_global.less
+++ b/wp-content/themes/anbig/assets/less/_global.less
@@ -1,5 +1,6 @@
 body{
 	font-family: 'Roboto';
+	overflow-x: hidden;
 }
 
 .fullWidthImg{width:100%; height:auto;}
